CHANGELOG

When		Who		What
======================================================================================
2019-01-23      Richard Forth   Closes Issue #287
				Typo on --skip-os-version-check option
				rectified.
2019-01-08      psytester       Added support for SUSE Linux and apache in
				/opt/apache2
2018-12-02      Richard Forth   Closes Issue #281
				Php memory limit was only interpretted in MB.
				Forced a change that accepts whatever is in
				the config, eg '128M' or '16G'.
2018-10-13      Richard Forth   Closes Issue #278
				logs to log (spelling correction in verbiage)
2018-10-13      Richard Forth   Closes Issue #194
				Detect issues getting package updates.
2018-10-13      Richard Forth   Closes Issue #245
				Skip OS Version Check option, see --help.
2018-10-13      Richard Forth   Closes Issue #221
				Log Uptime in /var/log/apache2buddy.log
2018-10-13      Richard Forth   Closes Issue #251 
				Warn if vhost_count exceeds maxclients
2018-10-12      Richard Forth   Closes Issue #273 Graceful catch of syntax
				error in httpd.conf when parsing config.
2018-10-12      Richard Forth   Closes Issue #252 Add verbiage about Apache
				2.2 EOL. Refer to https://httpd.apache.org/.
2018-10-12      Richard Forth   Closes Issue #255 Ignore large gzipped files.
2018-10-12      Richard Forth   Closes Issue #268 Additional verbiage about
				maxclients/maxrequestworkers being hit only
				once per lifetime.

				For more information see: 
				https://github.com/apache/httpd/blob/0b61edca6cdda2737aa1d84a4526c5f9d2e23a8c/server/mpm/prefork/prefork.c#L809
2018-10-12      Richard Forth   Closes Issue #241 --no-check-pid causes perl
				error. 
2018-09-26      Andriy Fetsyuk  Merged a change to support more environments. 
2018-08-30      Richard Forth   Issue #259 fix fpm support for ubuntu systems. 
2018-08-28      Richard Forth   Issue #259 add support for ubuntu 18.04 
2018-05-11      Richard Forth   Issue #253 need to specify a pid to bypass the 